--- a/src/libcu/libcu.vcxproj
+++ b/src/libcu/libcu.vcxproj
@@ -45,14 +45,13 @@
     <ClInclude Include="..\include\_dirent.h" />
     <ClInclude Include="..\include\direntcu.h" />
     <ClInclude Include="..\include\errnocu.h" />
-    <ClInclude Include="..\include\host_functions.h" />
     <ClInclude Include="..\include\regexcu.h" />
     <ClInclude Include="..\include\sentinel-unistdmsg.h" />
     <ClInclude Include="..\include\sentinel-stdiomsg.h" />
     <ClInclude Include="..\include\sentinel-stdlibmsg.h" />
     <ClInclude Include="..\include\sentinel.h" />
     <ClInclude Include="..\include\stdargcu.h" />
-    <ClInclude Include="..\include\xstddefcu.h" />
+    <ClInclude Include="..\include\stddefcu.h" />
     <ClInclude Include="..\include\stdiocu.h" />
     <ClInclude Include="..\include\stdlibcu.h" />
     <ClInclude Include="..\include\stringcu.h" />
@@ -65,7 +64,7 @@
     <ClCompile Include="sentinel-msg.cpp" />
     <ClCompile Include="sentinel.cpp" />
     <ClCompile Include="sentinel-host.cpp" />
-    <ClCompile Include="host_functions.cpp" />
+    <ClCompile Include="cuda_runtime.cpp" />
     <None Include="program.full.cu" />
     <None Include="sys\timecu.cu" />
     <None Include="pwdcu.cu" />
