--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,9 +19,9 @@ add_library(libcu.${arch} STATIC
   #libcu/setjmpcu.cu
 
   #libcu/stdiocu.cu
-  libcu/stdlibcu.cu
+  #libcu/stdlibcu.cu
   #libcu/stringcu.cu
-  #libcu/timecu.cu
+  libcu/timecu.cu
   #libcu/unistdcu.cu
   #libcu/direntcu.cu
   #libcu/sys/statcu.cu
